compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_nested_constructor_inner.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2372
expression: "\nimport option\nimport wobble\n\npub fn main(x) -> option.Option<wobble.Wibble> {\n    option.Some(wobble.Wobble(1))\n}\n"
---
----- BEFORE ACTION

import option
import wobble

pub fn main(x) -> option.Option<wobble.Wibble> {
    option.Some(wobble.Wobble(1))
                      ▔▔▔▔▔▔▔↑   
}


----- AFTER ACTION

import option
import wobble.{Wobble}

pub fn main(x) -> option.Option<wobble.Wibble> {
    option.Some(Wobble(1))
}
