compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_with_alias.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2176
expression: "\nimport option as opt\n\npub fn main() {\n  opt.Some(1)\n}\n"
---
----- BEFORE ACTION

import option as opt

pub fn main() {
  opt.Some(1)
  ▔▔▔▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{Some} as opt

pub fn main() {
  Some(1)
}
