compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__qualified_to_unqualified_import_with_comma.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 2105
expression: "\nimport option.{None, }\n\npub fn main() {\n  option.Some(1)\n}\n"
---
----- BEFORE ACTION

import option.{None, }

pub fn main() {
  option.Some(1)
        ▔▔▔▔▔↑  
}


----- AFTER ACTION

import option.{None, Some }

pub fn main() {
  Some(1)
}
